Changed some vh in CSS to percentage in order to fix scaling on mobile chrome

--- a/src/Components/Game/Content.css
+++ b/src/Components/Game/Content.css
@@ -7,8 +7,8 @@
 
 .end-turn-btn {
     cursor: pointer;
-    height: 8.5vh;
-    width: 25vh;
+    height: 8.5%;
+    width: 2%;
     color: white;
     background-color: rgb(21, 197, 21);
     margin-top: 8vh;
@@ -22,7 +22,7 @@
 
 .keyboard-wrapper {
     position: relative;
-    height: 57.5vh;
+    height: 57.5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
