--- a/src/Components/Game/Walkthrough.css
+++ b/src/Components/Game/Walkthrough.css
@@ -19,7 +19,7 @@
 .walkthrough-image {
     display: flex;
     width: auto;
-    height: 60vh;
+    height: 60%;
 }
 
 .walkthrough-desc {
